# Logging

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
examples/: main.cpp  meson.build
include/: ConsoleSink.h  FileSink.h  LogLevel.h  LogMessage.h  LogSink.h  Logger.h  RotatingFileSink.h
src/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  RotatingFileSink.cpp  meson.build
